# jibble_connector

./: .gitignore  README.md  __init__.py  __manifest__.py  pyproject.toml  requirements.txt
controllers/: __init__.py  webhook.py
data/: ir_cron_data.xml
models/: __init__.py  hr_attendance.py  hr_employee.py  jibble_api.py  jibble_sync_log.py  res_config_settings.py
readme/: CONFIGURE.md  CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
security/: ir.model.access.csv  security.xml
static/description/: index.html
views/: hr_employee_views.xml  jibble_sync_log_views.xml  res_config_settings_views.xml
wizards/: __init__.py  jibble_sync_wizard.py  jibble_sync_wizard_views.xml
