[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jibble-connector"
version = "18.0.1.0.0"
description = "Jibble integration for Odoo HR Attendance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Huri Money"}
]
keywords = ["odoo", "jibble", "hr", "attendance", "time-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Odoo",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/HuriMoney/jibble_connector"
Repository = "https://github.com/HuriMoney/jibble_connector.git"
Issues = "https://github.com/HuriMoney/jibble_connector/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["jibble_connector*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long
    "W503",  # line break before binary operator
]